venues index/create

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
                 <li><a href="/films">Films</a></li>
                 <li><a href="/shorts">Shorts</a></li>
                 <li><a href="/licensors">Licensors</a></li>
-                <!-- <li><a href="/theaters">Theaters</a></li> -->
+                <li><a href="/venues">Venues</a></li>
                 <!-- <li><a href="/bookings">Bookings</a></li> -->
                 <li><a href="/dvd_customers">DVD Customers</a></li>
                 <li><a href="/shipping_addresses">DVD Ship Addresses</a></li>
