--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -72,7 +72,7 @@
     }
 
     ul {
-      height: 200px;
+      max-height: 200px;
       overflow-y: scroll;
     }
 
@@ -82,7 +82,7 @@
     }
 
     .return-customer ul {
-      height: 120px;
+      max-height: 120px;
       overflow-y: scroll;
     }
   }
