--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -21,7 +21,7 @@ body {
   }
 
   #admin-framework {
-    height: 100%;
+    min-height: 100%;
 
     #admin-row {
       margin: 0;
@@ -49,7 +49,7 @@ body {
           color: #B0B0B0;
 
           li {
-            padding-bottom: 30px;
+            &:not(:last-of-type) { padding-bottom: 30px; }
 
             .highlight {
               color: $button-color;
@@ -364,5 +364,33 @@ body {
 
   &.jobs-spinner {
     top: calc(35% - (#{$spinner-size} / 2));
+  }
+}
+
+.details-component {
+
+  input, .nice-select {
+    width: 100%;
+  }
+
+  .noFieldError {
+    margin-bottom: 30px;
+  }
+
+  .yesFieldError {
+    margin-top: 10px;
+    height: 10px;
+    margin-bottom: 40px;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 16px;
+    font-family: 'teachablesansmedium';
+    margin-bottom: 30px;
+  }
+
+  a#delete {
+    float: right;
   }
 }
