copy venue billing address to shipping address

--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -393,4 +393,11 @@ body {
   a#delete {
     float: right;
   }
+
+  .copy-address-button {
+    margin-top: 28px;
+    padding: 14px 0;
+    width: 100%;
+    max-width: 250px;
+  }
 }
