shred venue addresses

--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -1,5 +1,6 @@
 Images = {
-  openModal: "<%= image_path('open-modal.png') %>",
+  attention: "<%= image_path('attention.png') %>",
   blackPlus: "<%= image_path('black-plus.png') %>",
-  attention: "<%= image_path('attention.png') %>"
+  openModal: "<%= image_path('open-modal.png') %>",
+  shredder: "<%= image_path('shredder.png') %>"
 }
