--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,3 +46,4 @@ $button-color: #01647C;
 @import 'me/invoice-details';
 @import 'me/dvd-reports';
 @import 'me/return-details';
+@import 'me/venue-details';
