use handy tools methods

--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -2,5 +2,6 @@ Images = {
   attention: "<%= image_path('attention.png') %>",
   blackPlus: "<%= image_path('black-plus.png') %>",
   openModal: "<%= image_path('open-modal.png') %>",
+  spinner: "<%= image_path('ajax-loader.svg') %>",
   shredder: "<%= image_path('shredder.png') %>"
 }
