paginate pos/invoices

--- a/app/assets/stylesheets/me/purchase-orders-index.scss
+++ b/app/assets/stylesheets/me/purchase-orders-index.scss
@@ -1,6 +1,6 @@
 #purchase-orders-index {
 
-  a:not(:first-of-type) {
+  a:not(:first-of-type):not(.see-all) {
     position: relative;
     margin-right: 20px;
 
