--- a/app/views/films/import.html.erb
+++ b/app/views/films/import.html.erb
@@ -1,6 +1,8 @@
 <%= form_for User.first do |f| %>
   Films:
   <%= f.file_field :films_file %>
+  Theaters:
+  <%= f.file_field :theaters_file %>
   Admin:
   <%= f.file_field :admin_file %>
   <input type="submit" />
