--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,3 +47,4 @@ $button-color: #01647C;
 @import 'me/dvd-reports';
 @import 'me/return-details';
 @import 'me/venue-details';
+@import 'me/booking-details';
