--- a/app/assets/stylesheets/me/booking-details.scss
+++ b/app/assets/stylesheets/me/booking-details.scss
@@ -17,4 +17,34 @@
   a.confirmation-button {
     margin-bottom: 30px;
   }
+
+  ul {
+    border: 1px solid #E4E9ED;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 15px;
+
+    li {
+      position: relative;
+
+      &:not(:last-of-type) {
+        margin-bottom: 15px;
+      }
+
+      .x-button {
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        background-image: asset-url('gray-x.png');
+        background-size: contain;
+        width: 17px;
+        height: 17px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  a {
+    margin-bottom: 30px;
+  }
 }
