--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,3 +48,4 @@ $button-color: #01647C;
 @import 'me/return-details';
 @import 'me/venue-details';
 @import 'me/booking-details';
+@import 'me/settings-details';
