--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
                 <li><a href="/giftboxes">Gift Boxes</a></li>
                 <li><a href="/users">Users</a></li>
                 <li><a href="/royalty_reports">Royalties</a></li>
+                <li><a href="/settings">Settings</a></li>
                 <% if current_user.email == "peter@filmmovement.com" %>
                   <li><a href="/import">Import Data Files</a></li>
                 <% end %>
