settings error message

--- a/app/assets/stylesheets/me/settings-details.scss
+++ b/app/assets/stylesheets/me/settings-details.scss
@@ -1,6 +1,12 @@
 .settings-details {
-  
+
   .noFieldError {
     margin-bottom: 30px;
+  }
+
+  .yesFieldError {
+    margin-top: 10px;
+    height: 10px;
+    margin-bottom: 40px;
   }
 }
