crud countries, languages, genres, topics

--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,1 +1,5 @@
 <div id="setting-details">replace me</div>
+<div id="countries-index">replace me</div>
+<div id="languages-index">replace me</div>
+<div id="genres-index">replace me</div>
+<div id="topics-index">replace me</div>
