fix fonts and start labels

--- a/app/assets/stylesheets/me/booking-details.scss
+++ b/app/assets/stylesheets/me/booking-details.scss
@@ -8,7 +8,7 @@
 
   label.checkbox {
     display: inline-block;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     color: #2C2F33;
     font-size: 12px;
     margin-bottom: 15px;
