--- a/app/assets/stylesheets/me/dvd-customer-details.scss
+++ b/app/assets/stylesheets/me/dvd-customer-details.scss
@@ -3,7 +3,7 @@
   p {
     font-weight: bold;
     font-size: 16px;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     margin-bottom: 30px;
   }
 
@@ -19,7 +19,7 @@
 
   label.checkbox {
     display: inline-block;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     color: #2C2F33;
     font-size: 12px;
     margin-bottom: 15px;
