--- a/app/assets/stylesheets/me/invoices-index.scss
+++ b/app/assets/stylesheets/me/invoices-index.scss
@@ -12,7 +12,7 @@
 .filter-modal {
 
   h2 {
-    font-family: 'TeachableSansMedium';
+    font-family: 'TeachableSans-Medium';
     font-size: 12px;
     color: #2C2F33;
     margin-bottom: 15px;
