--- a/app/assets/stylesheets/me/purchase-order-details.scss
+++ b/app/assets/stylesheets/me/purchase-order-details.scss
@@ -5,7 +5,7 @@
     padding: 10px;
     margin-bottom: 15px;
     border-radius: 5px;
-    font-family: 'teachablesansbold';
+    font-family: 'TeachableSans-Bold';
   }
 
   input, .nice-select {
@@ -22,7 +22,7 @@
 
   label.checkbox {
     display: inline-block;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     color: #2C2F33;
     font-size: 12px;
     margin-bottom: 0;
@@ -57,7 +57,7 @@
 
     td.warning {
       color: red;
-      font-family: 'teachablesansbold';
+      font-family: 'TeachableSans-Bold';
     }
 
     .name-column {
