--- a/app/assets/stylesheets/me/confirm-delete.scss
+++ b/app/assets/stylesheets/me/confirm-delete.scss
@@ -4,7 +4,7 @@
 
     h1 {
       color: #2C2F33;
-      font-family: 'TeachableSansSemiBold';
+      font-family: 'TeachableSans-SemiBold';
       font-size: 20px;
       line-height: 27px;
       margin: auto;
