--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -12,7 +12,7 @@
 
   label.checkbox {
     display: inline-block;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     color: #2C2F33;
     font-size: 12px;
     margin-bottom: 15px;
@@ -114,7 +114,7 @@
     }
 
     label {
-      font-family: 'teachablesansmedium';
+      font-family: 'TeachableSans-Medium';
       color: #2C2F33;
       font-size: 12px;
       margin-bottom: 15px;
@@ -137,7 +137,7 @@
     }
 
     label {
-      font-family: 'teachablesansmedium';
+      font-family: 'TeachableSans-Medium';
       color: #2C2F33;
       font-size: 12px;
       margin-bottom: 15px;
