--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -48,7 +48,7 @@ body {
 
         #admin-sidebar-body {
           padding: 36px 32px;
-          font-family: 'TeachableSansSemiBold';
+          font-family: 'TeachableSans-SemiBold';
           font-size: 13px;
           color: #B0B0B0;
 
@@ -58,7 +58,7 @@ body {
             .highlight {
               color: $button-color;
               cursor: default;
-              font-family: 'TeachableSansExtraBold';
+              font-family: 'TeachableSans-ExtraBold';
             }
           }
         }
@@ -143,7 +143,7 @@ body {
       color: #5F5F5F;
 
       h2 {
-        font-family: 'TeachableSansMedium';
+        font-family: 'TeachableSans-Medium';
         font-size: 12px;
         color: #2C2F33;
         margin-bottom: 15px;
@@ -182,12 +182,12 @@ body {
   }
 
   .orange-button, .light-orange-button, .red-button {
-    font-family: 'TeachableSansBold';
+    font-family: 'TeachableSans-Bold';
     padding: 15px 40px;
   }
 
   .blue-outline-button {
-    font-family: 'TeachableSansSemiBold';
+    font-family: 'TeachableSans-SemiBold';
     padding: 10px 40px;
     color: $button-color;
     border: solid 1px $button-color;
@@ -242,7 +242,7 @@ body {
     border-radius: 6px;
     width: 240px;
     height: 255px;
-    font-family: 'TeachableSansSemiBold';
+    font-family: 'TeachableSans-SemiBold';
     color: #FF7F45;
     text-align: center;
     cursor: pointer;
@@ -261,7 +261,7 @@ body {
       border-bottom: solid 1px #DADEE2;
 
       th {
-        font-family: 'TeachableSansSemiBold';
+        font-family: 'TeachableSans-SemiBold';
         padding-bottom: 20px;
         color: black;
       }
@@ -273,7 +273,7 @@ body {
         display: inline;
         color: #01647C;
         cursor: default;
-        font-family: 'TeachableSansExtraBold';
+        font-family: 'TeachableSans-ExtraBold';
       }
 
       .sort-header-inactive {
@@ -292,12 +292,12 @@ body {
       }
 
       tr.bold td, td.bold {
-        font-family: 'TeachableSansMedium';
+        font-family: 'TeachableSans-Medium';
         color: black;
       }
 
       td.name-column {
-        font-family: 'TeachableSansMedium';
+        font-family: 'TeachableSans-Medium';
         color: black;
         padding-left: 10px;
 
@@ -366,7 +366,7 @@ body {
   h3 {
     font-weight: bold;
     font-size: 16px;
-    font-family: 'teachablesansmedium';
+    font-family: 'TeachableSans-Medium';
     margin-bottom: 30px;
   }
 
