--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -36,7 +36,7 @@
 
     label.checkbox {
       display: inline-block;
-      font-family: 'teachablesansmedium';
+      font-family: 'TeachableSans-Medium';
       color: #2C2F33;
       font-size: 12px;
       margin-bottom: 15px;
@@ -66,7 +66,7 @@
     h1 {
       font-weight: bold;
       font-size: 16px;
-      font-family: 'teachablesansmedium';
+      font-family: 'TeachableSans-Medium';
       color: #5F5F5F;
       margin-bottom: 30px;
     }
