--- a/app/assets/stylesheets/me/report-details.scss
+++ b/app/assets/stylesheets/me/report-details.scss
@@ -41,7 +41,7 @@
   .stream-name {
     margin-top: 10px;
     text-align: center;
-    font-family: 'TeachableSansMedium';
+    font-family: 'TeachableSans-Medium';
     font-size: 12px;
     color: #2C2F33;
   }
@@ -76,7 +76,7 @@
     width: 300px;
     text-align: right;
     margin-top: 10px;
-    font-family: 'TeachableSansMedium';
+    font-family: 'TeachableSans-Medium';
     font-size: 12px;
     color: #2C2F33;
   }
