--- a/app/assets/stylesheets/me/reports-index.scss
+++ b/app/assets/stylesheets/me/reports-index.scss
@@ -49,7 +49,7 @@
 
     h1 {
       color: #2C2F33;
-      font-family: 'TeachableSansSemiBold';
+      font-family: 'TeachableSans-SemiBold';
       font-size: 20px;
       line-height: 27px;
       max-width: 350px;
