--- a/app/assets/stylesheets/me/reset.scss
+++ b/app/assets/stylesheets/me/reset.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'TeachableSansRegular', sans-serif;
+  font-family: 'TeachableSans-Regular', sans-serif;
   font-size: 12px;
   letter-spacing: 1.08px;
 }
