--- a/app/assets/stylesheets/me/sign-in.scss
+++ b/app/assets/stylesheets/me/sign-in.scss
@@ -6,7 +6,7 @@
   max-width: 800px;
   border-radius: 5px;
   text-align: center;
-  font-family: 'TeachableSansSemiBold';
+  font-family: 'TeachableSans-SemiBold';
 
   #header {
     background-position-y: bottom;
@@ -56,7 +56,7 @@
     .submit-field {
       input {
         display: inline-block;
-        font-family: 'TeachableSansBold';
+        font-family: 'TeachableSans-Bold';
         font-size: 14px;
         padding: 15px 40px;
         border-radius: 100px;
