start booking import

--- a/app/views/films/import.html.erb
+++ b/app/views/films/import.html.erb
@@ -5,5 +5,7 @@
   <%= f.file_field :theaters_file %>
   Admin:
   <%= f.file_field :admin_file %>
+  Bookings:
+  <%= f.file_field :bookings_file %>
   <input type="submit" />
 <% end %>
