--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,5 +47,6 @@ $button-color: #01647C;
 @import 'me/dvd-reports';
 @import 'me/return-details';
 @import 'me/venue-details';
+@import 'me/bookings-index';
 @import 'me/booking-details';
 @import 'me/settings-details';
