add box office received column and add columns to bookings index

--- a/app/assets/stylesheets/me/bookings-index.scss
+++ b/app/assets/stylesheets/me/bookings-index.scss
@@ -1,6 +1,14 @@
 .bookings-index {
 
-  th:first-of-type {
+  th.small-column {
     min-width: 125px;
+  }
+
+  th.med-column {
+    min-width: 200px;
+  }
+
+  th.large-column {
+    min-width: 350px;
   }
 }
