export bookings spreadsheet

--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -136,6 +136,10 @@ body {
       &:focus {
         outline: none;
       }
+
+      &.no-margin {
+        margin-right: 0;
+      }
     }
 
     .white-box {
