finish advanced search modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,3 +50,4 @@ $button-color: #01647C;
 @import 'me/bookings-index';
 @import 'me/booking-details';
 @import 'me/settings-details';
+@import 'me/advanced-search';
