ability to invoice advance + overage

--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -3,5 +3,6 @@ Images = {
   blackPlus: "<%= image_path('black-plus.png') %>",
   openModal: "<%= image_path('open-modal.png') %>",
   spinner: "<%= image_path('ajax-loader.svg') %>",
-  shredder: "<%= image_path('shredder.png') %>"
+  shredder: "<%= image_path('shredder.png') %>",
+  edit: "<%= image_path('edit.svg') %>"
 }
