city/state in venues index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,3 +51,4 @@ $button-color: #01647C;
 @import 'me/booking-details';
 @import 'me/settings-details';
 @import 'me/advanced-search';
+@import 'me/venues-index';
