film details - bookings count, search

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -175,6 +175,38 @@
       }
     }
   }
+
+  .search-box {
+    margin-right: 0 !important;
+    margin-bottom: 40px;
+  }
+
+  ul.bookings-count-list {
+    display: inline-block;
+    font-family: 'TeachableSans-Bold';
+    font-size: 14px;
+
+    li {
+      float: left;
+      border: 1px solid #E4E9ED;
+      border-radius: 10px;
+      padding: 10px 20px;
+      &:not(:last-of-type) {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  .bookings-table {
+
+    th:first-of-type {
+      width: 180px;
+    }
+
+    th:last-of-type {
+      width: 200px;
+    }
+  }
 }
 
 .licensor-modal-list {
