--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
                 <li><a href="/licensors">Licensors</a></li>
                 <li><a href="/venues">Venues</a></li>
                 <li><a href="/bookings">Bookings</a></li>
+                <li><a href="/bookers">Bookers</a></li>
                 <li><a href="/dvd_customers">DVD Customers</a></li>
                 <li><a href="/shipping_addresses">DVD Ship Addresses</a></li>
                 <li><a href="/purchase_orders">DVD POs</a></li>
