--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -204,6 +204,10 @@ body {
       padding: 5px 10px 5px 10px;
       min-width: 120px;
     }
+
+    &.margin-bottom {
+      margin-bottom: 30px;
+    }
   }
 
   .red-button {
