--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,3 +52,4 @@ $button-color: #01647C;
 @import 'me/settings-details';
 @import 'me/advanced-search';
 @import 'me/venues-index';
+@import 'me/in-theaters';
