--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -1,6 +1,7 @@
 Images = {
   attention: "<%= image_path('attention.png') %>",
   blackPlus: "<%= image_path('black-plus.png') %>",
+  handle: "<%= image_path('handle.png') %>",
   openModal: "<%= image_path('open-modal.png') %>",
   spinner: "<%= image_path('ajax-loader.svg') %>",
   shredder: "<%= image_path('shredder.png') %>",
