--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -342,6 +342,7 @@ body {
         background-size: contain;
         width: 17px;
         height: 17px;
+        cursor: pointer;
       }
     }
 
