--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,4 +1,5 @@
 <div id="setting-details">replace me</div>
+<div id="territories-index">replace me</div>
 <div id="formats-index">replace me</div>
 <div id="countries-index">replace me</div>
 <div id="languages-index">replace me</div>
