film rights, replace short_film

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,3 +53,4 @@ $button-color: #01647C;
 @import 'me/advanced-search';
 @import 'me/venues-index';
 @import 'me/in-theaters';
+@import 'me/film-rights-new';
