import formats, add to website api

--- a/app/views/films/import.html.erb
+++ b/app/views/films/import.html.erb
@@ -3,5 +3,7 @@
   <%= f.file_field :films_file %>
   Admin:
   <%= f.file_field :admin_file %>
+  Formats:
+  <%= f.file_field :formats_file %>
   <input type="submit" />
 <% end %>
