tentative release dates

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -1,6 +1,12 @@
 .film-details {
 
   .schedule {
+
+    li.tentative {
+      color: red;
+      font-style: italic;
+    }
+    
     margin-bottom: 60px;
   }
 
