calendar page and component skeleton

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
                 <li><a href="/films">Films</a></li>
                 <li><a href="/shorts">Shorts</a></li>
                 <li><a href="/licensors">Licensors</a></li>
+                <li><a href="/calendar">Calendar</a></li>
                 <li><a href="/venues">Venues</a></li>
                 <li><a href="/bookings">Bookings</a></li>
                 <li><a href="/bookers">Bookers</a></li>
