--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -6,7 +6,7 @@
       color: red;
       font-style: italic;
     }
-    
+
     margin-bottom: 60px;
   }
 
@@ -151,6 +151,10 @@
       color: #2C2F33;
       font-size: 12px;
       margin-bottom: 15px;
+
+      &:not(:last-of-type) {
+        margin-right: 40px;
+      }
     }
   }
 
