--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,4 @@ $button-color: #01647C;
 @import 'me/venues-index';
 @import 'me/in-theaters';
 @import 'me/film-rights-new';
+@import 'me/calendar';
