show sublicensed rights (index and details)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,3 +55,4 @@ $button-color: #01647C;
 @import 'me/in-theaters';
 @import 'me/film-rights-new';
 @import 'me/calendar';
+@import 'me/sublicensor-details';
