--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -2,6 +2,11 @@ html {
   height: 100%;
 }
 
+.select-scroll .nice-select ul {
+  height: 400px;
+  overflow-y: scroll;
+}
+
 .clearfix:after {
   content: "";
   display: block;
@@ -410,6 +415,17 @@ body {
     margin-top: 10px;
     height: 10px;
     margin-bottom: 40px;
+  }
+
+  .noDropdownFieldError {
+    height: 81px;
+  }
+
+  .yesDropdownFieldError {
+    padding-top: 55px;
+    height: 55px;
+    color: red;
+    margin-bottom: 30px;
   }
 
   h3 {
