add film id to sub rights

--- a/app/assets/stylesheets/me/film-rights-new.scss
+++ b/app/assets/stylesheets/me/film-rights-new.scss
@@ -39,12 +39,7 @@
   }
 
   .nice-select {
-    min-width: 150px;
-  }
-
-  ul {
-    max-height: 120px;
-    overflow-y: scroll;
+    width: 100%;
   }
 
   img {
