--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -7,6 +7,11 @@ html {
   overflow-y: scroll;
 }
 
+.select-scroll-3 .nice-select ul {
+  height: 120px;
+  overflow-y: scroll;
+}
+
 .clearfix:after {
   content: "";
   display: block;
