--- a/app/assets/stylesheets/me/dvd-reports.scss
+++ b/app/assets/stylesheets/me/dvd-reports.scss
@@ -1,4 +1,10 @@
 #dvd-reports {
+  position: relative;
+
+  .export-button {
+    position: absolute;
+    right: 0;
+  }
 
   .white-box {
     padding: 30px 20px;
@@ -67,5 +73,30 @@
 
   th.units {
     width: 40px;
+  }
+}
+
+.export-modal {
+
+  h2 {
+    font-family: 'TeachableSans-Medium';
+    font-size: 12px;
+    color: #2C2F33;
+    margin-bottom: 15px;
+  }
+
+  input {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .button-row {
+    text-align: center;
+  }
+
+  a {
+    display: inline-block;
+    width: 50%;
+    margin: auto;
   }
 }
