--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -1,5 +1,9 @@
 .film-details {
 
+  .grabbed-element {
+    background-color: #CED8F6;
+  }
+
   div.key-art {
     width: 100%;
     height: 74px;
