--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,8 @@ $button-color: #01647C;
 @import 'me/mix-ins';
 @import 'me/general';
 
+@import 'handy-tools/styles/general';
+
 @import 'me/current-user-dropdown';
 @import 'me/confirm-delete';
 @import 'me/dvd-customer-details';
