back to film link on dvd pages

--- a/app/views/dvds/show.html.erb
+++ b/app/views/dvds/show.html.erb
@@ -1,6 +1,7 @@
 <% if @dvd %>
 
   <div id="dvd-details">replace me</div>
+  <a class="standard-link" href="/films/<%= @dvd.feature_film_id %>?tab=DVDs">Back to Film</a>
 
 <% else %>
 
