--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,7 +1,7 @@
 <% if @quote %>
 
   <div id="quote-details">replace me</div>
-  <a href="/films/<%= @quote.film_id %>?tab=marketing">Back to Film</a>
+  <a class="standard-link" href="/films/<%= @quote.film_id %>?tab=marketing">Back to Film</a>
 
 <% else %>
 
