add critic's pick / certified fresh

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -209,6 +209,10 @@
     }
   }
 
+  .badge-checkboxes {
+    margin-bottom: 10px;
+  }
+
   .reserve-section.no-reserve, .auto-renew-section.no-renew {
 
     h2 {
