--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
                 <li><a href="/purchase_orders">DVD POs</a></li>
                 <li><a href="/returns">DVD Returns</a></li>
                 <li><a href="/dvd_reports">DVD Reports</a></li>
+                <li><a href="/catalog">Catalog</a></li>
                 <li><a href="/invoices">Invoices</a></li>
                 <li><a href="/sublicensors">Sublicensors</a></li>
                 <li><a href="/giftboxes">Gift Boxes</a></li>
