add html email header/footer images to public

--- a/app/views/dvds/show.html.erb
+++ b/app/views/dvds/show.html.erb
@@ -6,7 +6,7 @@
   <% film = @dvd.feature %>
   <% quotes = film.quotes.order(:order) %>
   <% laurels = film.laurels.order(:order) %>
-  <section id="email" class="">
+  <section id="email" class="hidden">
     <table style="width: 487.5pt;" border="0" cellpadding="0" width="650">
       <tbody>
         <tr>
